Setup content for aboutme page and fixed some layout issues found.

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,10 @@ ul {
   margin: 0;
 }
 
+.heading-margin-top {
+  margin-top: 2.5rem;
+}
+
 /* Icons */
 .icon {
   fill: var(--color-primary);
@@ -199,6 +203,18 @@ ul {
 .list {
   list-style: disc;
   padding-left: 1.5rem;
+}
+
+.list--horizontal {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.list--horizontal-item {
+  flex-basis: content;
+  margin-right: 3rem;
 }
 
 /* Buttons */
